# auto-gaming

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  notion.txt  pyproject.toml  requirements.txt  test_adb.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  logging_config.py  main.py
app/actions/: executor.py  types.py
app/agents/: orchestrator.py  runner.py
app/analytics/: metrics.py  session.py
app/device/: detect.py
app/diagnostics/: doctor.py
app/memory/: store.py
app/metrics/: registry.py
app/perception/: clickmap.py  interaction_memory.py  parser.py  ui_elements.py
captures/: frame_20250810_012827.json  frame_20250810_014013.json  frame_20250810_014130.json  frame_20250810_183719.json  frame_20250810_221827.json  frame_20250812_001335.json  frame_20250812_001709.json  frame_20250812_004601.json  frame_20250812_005316.json
scripts/: click_center.py  dev_server.sh  finalize_setup.ps1  full_setup.ps1  run_backend.ps1  update_env.ps1  windows_setup.ps1
tests/: test_memory_and_search.py  test_state_and_metrics.py  test_v040_actions_policy_safety.py  test_v060_safety.py  test_v070_multi_agent.py  test_v080_epic7.py  test_v110_input_capture_window.py  test_v120_ocr_tokens.py  test_v130_exploration.py  test_v140_safety.py  test_v150_hf_eval_harness.py  test_v150_hf_judge_bounds.py  test_v150_hf_policy_fallback.py  test_v170_reliability.py  test_v180_state_hash.py  test_v190_decision_cache.py  test_v212_ocr_batch_norm.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+379 files in other folders)
